--- a/belajar_landing.html
+++ b/belajar_landing.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mokaflow Coffee</title>
+  <link rel="stylesheet" href="style.css" />
+  <!-- Font Awesome untuk ikon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
+
   <header>
-    <nav>
+    <div class="logo">Mokaflow Coffee</div>
+    <div class="menu-toggle" id="menu-toggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav id="nav">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#home">Beranda</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#contact">Kontak</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="home" class="hero">
-    <h1>Selamat Datang di FN Coffe</h1>
-    <p>Your success is our priority</p>
-    <a href="#contact" class="btn">Order Sekarang</a>
+    <div class="hero-content">
+      <h1>Selamat Datang di Mokaflow Coffee</h1>
+      <p>Temukan cita rasa kopi terbaik dengan suasana yang hangat dan tenang.</p>
+      <button class="btn" onclick="document.getElementById('menu').scrollIntoView({behavior:'smooth'})">Lihat Menu</button>
+    </div>
   </section>
 
-  <section id="about" class="content">
-    <h2>About Us</h2>
-    <p>We are a dedicated team providing the best solutions for your business.</p>
+  <section class="about reveal">
+    <h2>Tentang Kami</h2>
+    <p>Mokaflow Coffee adalah tempat di mana aroma biji kopi segar berpadu dengan suasana yang nyaman. Kami menyajikan kopi berkualitas tinggi dari biji pilihan, diseduh dengan penuh perhatian oleh barista berpengalaman. Nikmati setiap tegukan dan rasakan aliran rasa yang khas di setiap cangkirnya.</p>
   </section>
 
-  <section id="services" class="content">
-    <h2>Our Services</h2>
-    <ul>
-      <p></p>Web Development</p>
-      <p></p>Web Development</p>
-      <p></p>Web Development</p>
-    </ul>
+  <section id="menu" class="reveal">
+    <h2>Menu Kami</h2>
+    <div class="menu-container">
+      <div class="menu-item">
+        <img src="images/coffee-maker-coffee-shop.jpg" alt="Manual Brew">
+        <h3>Manual Brew</h3>
+        <p>Kopi pilihan dengan metode seduh manual yang menonjolkan karakter rasa unik dari setiap biji kopi.</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/iced-coffee-with-whipped-cream.jpg" alt="Es Kopi Susu">
+        <h3>Es Kopi Susu</h3>
+        <p>Kombinasi sempurna antara espresso, susu segar, dan sirup gula aren khas Mokaflow.</p>
+      </div>
+      <div class="menu-item">
+        <img src="images/sweet-pastry-assortment-top-view.jpg" alt="Pastry">
+        <h3>Pastry</h3>
+        <p>Temani kopimu dengan pastry lembut dan gurih buatan tangan dari dapur Mokaflow.</p>
+      </div>
+    </div>
   </section>
 
-  <section id="contact" class="content">
-    <h2>Kontak Kami</h2>
-    <p>Hubungi kami di WhatsApp :</p>
-  <br><a href="https://wa.me/6285695570167" class="btn whatsapp-btn">Chat on WhatsApp</a></br>
+  <section id="contact" class="reveal">
+    <h2>Hubungi Kami</h2>
+    <div class="contact-info">
+      <p><i class="fa-solid fa-location-dot"></i> Jl. Kalimulya No. 15, Depok-Jawa Barat</p>
+      <p><i class="fa-solid fa-phone"></i> +62 856 9557 0167</p>
+      <p><i class="fa-solid fa-envelope"></i> mokaflow@coffee.id</p>
+      <p>
+        <a href="https://wa.me/6285695570167" target="_blank" class="contact-icon"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://instagram.com/mokaflow_coffe" target="_blank" class="contact-icon"><i class="fa-brands fa-instagram"></i></a>
+      </p>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+    <p>&copy; 2025 Mokaflow Coffee. All Rights Reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
